# haskellbook-groupexercises

ch11/chapter/: chapter.cabal  chapter.cabal~  jammin.hs  jammin.hs~
ch11/chapter/src/: Main.hs  Main.hs~
ch11/exercises/: LICENSE  exercises.cabal
ch11/exercises/src/: Main.hs  Main.hs~
