name:                exercises
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jjoedouglas/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              J. Joe Douglas
maintainer:          jjoedouglas@gmail.com
copyright:           2016 J. Joe Douglas
category:            Education
build-type:          Simple
cabal-version:       >=1.10

executable exercises
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
